# lib/api-spec/openapi.yaml
@@ -453,14 +453,17 @@ components:
           type: string
         imageUrl:
           type: string
+          nullable: true
         category:
           type: string
+        videoUrl:
+          type: string
+          nullable: true
         createdAt:
           type: string
       required:
         - id
         - title
-        - imageUrl
         - category
         - createdAt
 
@@ -471,11 +474,14 @@ components:
           type: string
         imageUrl:
           type: string
+          nullable: true
         category:
           type: string
+        videoUrl:
+          type: string
+          nullable: true
       required:
         - title
-        - imageUrl
         - category
 
     ContactForm:
